# fastapi-ci-template

./: .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
new_proj/: main.py  settings.py
tests/: test_status.py
