[tool.poetry]
name = "new-proj"
version = "0.1.0"
description = ""
authors = ["Malcev Nikita <maltsew.na@gmail.com>"]
readme = "README.md"
packages = [{include = "new_proj"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
mypy = "^1.3.0"
pylint = "^2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
